Volume/Service.yaml
apiVersion: v1
kind: Service
metadata:
   name: shared-web-srv
   labels:
      app: shared-web-app
spec:
   ports:
      - port: 80
        name: app
   selector:
      app: shared-web-app
