Volume/Ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: shared-web-route
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`shared.t.container-training.de`)
    kind: Rule
    services:
    - name: shared-web-srv
      port: 80
